# docker4ssh

./: Makefile  README.md
.github/: dependabot.yml
container/: Cargo.toml
container/src/: lib.rs
container/src/configure/: main.rs  mod.rs
container/src/configure/cli/: cli.rs  mod.rs  parser.rs
container/src/shared/: mod.rs
container/src/shared/api/: api.rs  mod.rs  request.rs
container/src/shared/logging/: logger.rs  mod.rs
examples/: Dockerfile  docker-compose.yml  docker4ssh.service
extra/: database.sql  docker4ssh.conf  profile.conf
man/: configure.1  docker4ssh.1  docker4ssh.conf.5  profile.conf.5
protocol/: configure.yaml
server/: go.mod  go.sum  main.go
server/api/: api.go  auth.go  config.go  error.go  info.go  ping.go  utils.go
server/cmd/: cmd.go  start.go  validate.go
server/config/: config.go  profile.go
server/database/: auth.go  database.go  delete.go  settings.go
server/docker/: client.go  container.go  docker.go  image.go  network.go
server/logging/: logging.go
server/ssh/: config.go  connection.go  handle.go  ssh.go
server/terminal/: terminal.go
server/utils/: convert.go  jsonmessage.go
server/validate/: error.go  validate.go  validate_config.go  validate_profile.go
